# Recording_Project

./: .env.example  README.md  current_requirements.txt  pyproject.toml  ts_download.py
src/: cli.py  cli_display.py  config_manager.py  logging.py  main.py  s3_reader.py  s3_utils.py  utils.py  validation.py
tests/: test_config_manager.py  test_main.py  test_s3_reader.py  test_utils.py
