[tool.poetry]\nname = "recording-project"\nversion = "3.0.0"\ndescription = "S3 ES Downloader & Parser with Upload Support"\nauthors = ["Your Name <email@example.com>"]\nreadme = "README.md"\n\n[tool.poetry.dependencies]\npython = "^3.7"\nboto3 = "^1.35"\ncolorama = "^0.4"\nrequests = "^2.32"\nFlask = "^3.0"\npython-dotenv = "^1.0"\ntqdm = "^4.66"\ngunicorn = "^22"\nrequests-toolbelt = "^1.0"\n\n[tool.poetry.group.dev.dependencies]\npytest = "^8.3"\npytest-cov = "^5.0"\nmoto[all] = "^5.0"\nmypy = "^1.11"\nblack = "^24.8"\nisort = "^5.13"\n\n[build-system]\nrequires = ["poetry-core>=1.0.0"]\nbuild-backend = "poetry.core.masonry.api"\n\n[tool.mypy]\npython_version = "3.13"\nwarn_return_any = true\nwarn_unused_configs = true\n\n[tool.pytest.ini_options]\nminversion = "8.3"\naddopts = "-ra --strict-markers"\ntestpaths = ["tests"]\n\n[tool.black]\ntarget-version = ['py37']\nline-length = 88\n\n[tool.isort]\nprofile = "black"\nline_length = 88